1041.	[func]		tomek
	A new library, libkea-eval has been edded. It is not functional
	yet, but its purpose is to provide a generic expression
	evaluations that will be used in the upcoming client classification.
	(Trac #4081, git 28d818a26a5d128e8a51d62b68c0cc817e6e2415)

1040.	[func]		tmark
	When kea servers lose connectivity with MySQL or PostgreSQL backends
	they will log an error message and exit with an exit value of 255.
	(Trac #3780, git cf94e99698e1d8a1613026bda5e4fc9bb4a68d74)

1039.	[doc]		marcin
	Configuration parameters pertaining to processing expired
	leases by the DHCPv4 and DHCPv6 server have been documented.
	(Trac #3979, git a2ee99ba313e54a9dcf8a09ed118dbfe612e3d55)

1038.	[func]*		marcin
	DHCPv4 and DHCPv6 servers reclaim expired leases before they
	are re-assigned.
	(Trac #3977, git 5880e706cb27c19b1b70296ccd8d96e38e82027b)

1037.	[func]		fdupont
	Added a new 'leases-reclaim' command which reclaims expired leases
	immediately.
	(Trac #3978, git 9d5716e5bd6b151d90591f8497bae689321875c2)

1036.	[func]		tmark
	kea-admin now supports upgrading from Postgres schema version
	1.0 to 2.0.  Schema 2.0 includes support for lease expiration
	and reclaimation.
	(Trac #3969, git 8fde70c1b63b5a2646688290b1d0cf53f4c964ad)

1035.	[doc]		fdupont
	Modified documentation of DHCP options to show internal format
	of records.
	(Trac #4071, git c5cffe74ac1bd38e4870ff1c22c36febb46e8c27))

1034.	[func]		fdupont
	Add support for DHCPv4 subnet selection option.
	(Trac #4058, git b7072884e8ce74dc64cd74e101d81e5c0763f492)

1033.	[bug]		stephen
	Updated OutputBuffer class to address warnings from Coverity.
	(Trac #3443, git 4bf0a14aa7a1303ed6959127c5354687e9f222ba)

1032.	[func]		marcin
	PostgreSQL lease database backend has been extended with new
	functions to obtain expired leases and to delete expired
	reclaimed leases.
	(Trac #3968, git 0bc02588d8553ba9a4fc749115a3e370407d7287)

1031.	[build]		fdupont
	Rewrote the system_messages tool from Python to C++.